--- a/new_project.html
+++ b/new_project.html
@@ -7,6 +7,26 @@
     <title>Document</title>
 </head>
 <body>
-    <div> arun</div>
+    <div class="header border-bottom">
+        <img src="https://img.icons8.com/material/4ac144/256/user-male.png" alt="icon" class="icon">
+        <div class="p_10">name</div>
+        <a class="p_10 _ml-auto" href="#sec1">sec1</a>
+        <a class="p_10" href="#sec2">sec2</a>
+        <a class="p_10" href="#sec3">sec3</a>
+        <a class="p_10 " href="#sec4">sec4</a>
+    </div>
+    <div class="section">
+        <div class="sec1 sec" id="sec1"> sec 1 details</div>
+        <div class="sec2 sec" id="sec2"> sec2 details</div>
+        <div class="sec3 sec" id="sec3"> sec 3 details and 
+            <div class="gallery"></div>
+        </div>
+
+        <div class="sec4 sec" id="sec4"> sec 4 details and 
+            <div class="review"> section for review and feedback</div>
+        </div>
+
+    </div>
+    <div class="footer"> author of web sites and advertisments</div>
 </body>
 </html>
