--- a/new_project.html
+++ b/new_project.html
@@ -19,7 +19,9 @@
         <div class="sec1 sec" id="sec1"> sec 1 details</div>
         <div class="sec2 sec" id="sec2"> sec2 details</div>
         <div class="sec3 sec" id="sec3"> sec 3 details and 
-            <div class="gallery"></div>
+            <div class="gallery">
+                <div class="img-container"></div>
+            </div>
         </div>
 
         <div class="sec4 sec" id="sec4"> sec 4 details and 
